--- a/main.yml
+++ b/main.yml
@@ -2,8 +2,8 @@
 - hosts: localhost
   become: yes
   vars:
-    username: "dummy_username"
-    userhome: "/home/{{ username }}"
+    user_name: "dummy_user"
+    user_home_dir_path: "/home/{{ user_name }}"
 
   roles:
-#    - first_role
+    - package-installation
